added adding reminder functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">ppn</string>
     <string-array name="Spinner_Edit_frequency">
-        <item>no_repeating</item>
-        <item>every_24_hours</item>
+        <item>No_repeting</item>
+        <item>Every_24_hours</item>
         <item>every_month</item>
         <item>every_year</item>
         <item>every_week</item>
@@ -18,10 +18,10 @@
     <string-array name="Spinner_Edit_category">
         <item>none</item>
         <item>Physiological_needs</item>
-        <item>Safety_Needs</item>
+        <item>Safety_needs</item>
         <item>Love_And_Belonging</item>
         <item>Esteem</item>
-        <item>Self_Actualization</item>
+        <item>Self_actualization</item>
     </string-array>
 
     <string-array name="spinnerItems">
